finished profile card UI Design

--- a/01-ProfileCard/index.html
+++ b/01-ProfileCard/index.html
@@ -15,6 +15,46 @@
       <div class="image">
         <img src="me.jpg" alt="" class="profile-img" />
       </div>
+
+      <div class="text-data">
+        <span class="name">Mwakanemela Kayange</span>
+        <span class="job">Software Engineer</span>
+      </div>
+
+      <div class="media-buttons">
+        <a href="#" style="background: black;" class="link black">
+          <i class="bx bxl-whatsapp"></i>
+        </a>
+        <a href="#" style="background: red;" class="link red">
+          <i class="bx bxl-facebook"></i>
+        </a>
+        <a href="#" style="background: green;" class="link green">
+          <i class="bx bxl-github"></i>
+        </a>
+        <a href="#" class="link">
+          <i class="bx bxl-linkedin"></i>
+        </a>
+      </div>
+
+      <div class="buttons">
+        <button class="button">Call</button>
+        <button class="button">Message</button>
+      </div>
+
+      <div class="analytics">
+        <div class="data">
+          <i class="bx bxl-flutter"></i>
+          <span class="number">0K</span>
+        </div>
+        <div class="data">
+          <i class="bx bxl-visual-studio"></i>
+          <span class="number">0K</span>
+        </div>
+        <div class="data">
+          <i class="bx bxl-unity"></i>
+          <span class="number">0K</span>
+        </div>
+      </div>
     </div>
   </body>
 </html>
